manifests/data-api/charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api
  namespace: ems1
spec:
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      nodeSelector:
        compass-ci.io/node-role: master
      dnsConfig:
        options:
          - name: single-request-reopen
      containers:
      - name: data-api
        image: data-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 10005
        livenessProbe:
          tcpSocket:
            port: 10005
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            memory: 15Gi
          requests:
            memory: 10Mi
        securityContext:
          runAsUser: 1090
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
            add:
            - DAC_READ_SEARCH
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
          subPath: localtime
        - name: defaults
          mountPath: /etc/compass-ci/defaults
        - name: service-env
          mountPath: /etc/compass-ci/service
      volumes:
      - name: localtime
        configMap:
          name: localtime
      - name: service-env
        configMap:
          name: service-env
      - name: defaults
        configMap:
          name: compass-ci-defaults
