manifests/data-api/charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-api
  namespace: ems1
spec:
  selector:
    app: data-api
  ports:
  - name: http
    port: 80
    targetPort: 10005
  - name: data-api
    port: 10005
